infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: community-capital-production
  labels:
    app.kubernetes.io/part-of: titech-community-capital
